Add a back card

--- a/playing-cards.less
+++ b/playing-cards.less
@@ -6,6 +6,10 @@
    height: 324px;
 }
 
+.pcard-back {
+   background-image: url("imgs/back.svg");
+}
+
 .pcard-as {
    background-image: url("imgs/ace_of_spades.svg");
 }
