Update selector to match even if pcard-x is not the first class

--- a/playing-cards.less
+++ b/playing-cards.less
@@ -1,4 +1,4 @@
-*[class^="pcard-"] {
+*[class^="pcard-"], *[class*=" pcard-"] {
    display: inline-block;
    background-repeat: no-repeat;
    background-size: 100% 100%;
